change the 2nd row column to be full row size.

--- a/demo/forms.html
+++ b/demo/forms.html
@@ -54,11 +54,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-12">
                 Third Column
-            </div>
-            <div class="col-md-6">
-                Forth Column
             </div>
         </div>
     </div>
