Rectify the first form.

--- a/demo/forms.html
+++ b/demo/forms.html
@@ -15,17 +15,18 @@
             <!-- md means medium or above, and below medium, it will stack-->
             <!-- lg means large, and below large (e.g. medium), it will stack-->
             <div class="col-md-6">
-
-                <form class="form-group">
-                    <label for="username">Username</label>
-                    <input class="form-control" type="text" name="username" id="username">
-                </form>
-                <form class="form-group">
-                    <label for="password">Password</label>
-                    <input class="form-control" type="text" name="password" id="password">
-                </form>
-                <form class="form-group">
-                    <button class="btn btn-primary">Submit</button>
+                <form>
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input class="form-control" type="text" name="username" id="username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input class="form-control" type="text" name="password" id="password">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary">Submit</button>
+                    </div>
                 </form>
 
             </div>
@@ -55,7 +56,9 @@
         </div>
         <div class="row">
             <div class="col-12">
-                Third Column
+
+
+
             </div>
         </div>
     </div>
