--- a/demo/index.html
+++ b/demo/index.html
@@ -8,11 +8,28 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/app.css">
 </head>
-<body>
+<body class="app sidebar-mini">
+    <header>
+        <a href="/" class="app-header__logo">HQ Admin</a>
+        <ul class="app-nav">
+            <li class="app-search">
+                <input type="search" class="app-search__input" placeholder="search">
+                <button class="app-search__button"><i class="fa fa-search"></i></button>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="app-nav__item" data-toggle="dropdown" aria-label="Open Menu">
+                    <i class="fa fa-user fa-lg"></i>
+                </a>
+                <ul class="dropdown-menu settings-menu dropdown-menu-right">
+                    <li><a href="" class="dropdown-item"><i class="fa fa-cog"></i> Settings</a></li>
+                    <li><a href="" class="dropdown-item"><i class="fa fa-user"></i> Profile</a></li>
+                    <li><a href="" class="dropdown-item"><i class="fa fa-sign-out-alt"></i> Logout</a></li>
+                </ul>
+            </li>
+        </ul>
+    </header>
 
 
-
-<h1>Hello World!</h1>
-<script src="/js/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
