Add the <aside> and <main> section in index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,6 +29,29 @@
         </ul>
     </header>
 
+    <aside class="app-sidebar">
+        <ul class="app-menu">
+            <li><a href="">Test</a></li>
+            <li><a href="">Test</a></li>
+            <li><a href="">Test</a></li>
+            <li><a href="">Test</a></li>
+            <li><a href="">Test</a></li>
+        </ul>
+    </aside>
+
+    <main class="app-content">
+        <div class="app-title">
+
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                Left
+            </div>
+            <div class="col-md-6">
+                Right
+            </div>
+        </div>
+    </main>
 
     <script src="/js/app.js"></script>
 </body>
