Finished styling the _app-header.scss

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="/css/app.css">
 </head>
 <body class="app sidebar-mini">
-    <header>
+    <header class="app-header">
         <a href="/" class="app-header__logo">HQ Admin</a>
         <ul class="app-nav">
             <li class="app-search">
+                <!-- Type search will create a X button when the input is not empty in chrome and IE -->
                 <input type="search" class="app-search__input" placeholder="search">
                 <button class="app-search__button"><i class="fa fa-search"></i></button>
             </li>
