Add styling for _app-sidebar.scss

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,11 +32,11 @@
 
     <aside class="app-sidebar">
         <ul class="app-menu">
-            <li><a href="">Test</a></li>
-            <li><a href="">Test</a></li>
-            <li><a href="">Test</a></li>
-            <li><a href="">Test</a></li>
-            <li><a href="">Test</a></li>
+            <li><a href="" class="app-menu__item">Test</a></li>
+            <li><a href="" class="app-menu__item">Test</a></li>
+            <li><a href="" class="app-menu__item">Test</a></li>
+            <li><a href="" class="app-menu__item">Test</a></li>
+            <li><a href="" class="app-menu__item">Test</a></li>
         </ul>
     </aside>
 
