Add the hamburger menu icon for the mobile view.

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,9 @@
 <body class="app sidebar-mini">
     <header class="app-header">
         <a href="/" class="app-header__logo">HQ Admin</a>
+        <a href="#" class="app-sidebar__toggle" data-toggle="sidebar" aria-label="Hide Sidebar">
+            <span class="fa fa-bars"></span>
+        </a>
         <ul class="app-nav">
             <li class="app-search">
                 <!-- Type search will create a X button when the input is not empty in chrome and IE -->
